# accounting-webapp

./: .gitignore  angular.json  package-lock.json  package.json
client/: angular.json
client/src/app/: app.component.html  app.module.ts
client/src/app/accounts/: accounts.component.html  accounts.component.scss  accounts.component.ts  accounts.service.ts
client/src/app/accounts/account-row/: account-row.component.html  account-row.component.ts
client/src/app/accounts/account-table/: account-table.component.html  account-table.component.scss  account-table.component.ts
client/src/app/main-view-port/: main-view-port.component.scss  main-view-port.component.spec.ts  main-view-port.component.ts
js_server/: package-lock.json  package.json  server.js  transactions.json
rust_server/migrations/2023-03-21-221111_create_transactions/: up.sql
rust_server/src/: models.rs  schema.rs
server/: .env  Cargo.toml
server/src/: lib.rs  models.rs
src/: index.html
src/app/: app.component.html  app.component.scss  app.component.ts  app.module.ts
src/app/accounts/: accounts.component.scss  accounts.component.ts
src/app/main-view-port/: main-view-port.component.html  main-view-port.component.scss  main-view-port.component.ts
src/app/performance/: performance.component.html  performance.component.ts
