[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "numeric", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.10", features = ["serde"] }
rand = "0.8"
