[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "numeric", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.10", features = ["serde"] }
rand = "0.8"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
env_logger = "0.7.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
smartcore = {version = "0.2.1", features=["serde"]}